[metadata]
name = dogbin
version = 0.1
author = deleted-account
author_email = DeletedAccuonts@hi2.in
description = Dogbin API Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Deleted-accounts/Dogbin-API-Wrapper
project_urls =
    Bug Tracker = https://github.com/Deleted-accounts/Dogbin-API-Wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dogbin
packages = find:
python_requires = >=3.8

[options.packages.find]
where = dogbin